--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-calendar": "^4.1.0",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
@@ -16,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
